--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://tinyurl.com/y5pfma6y">
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "https://tinyurl.com/y5pfma6y";
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://tinyurl.com/y5pfma6y">link</a>.</p>
