--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -3,10 +3,10 @@
 <head>
     <title>Redirecting...</title>
     <script type="text/javascript">
-        window.location.href = "https://tinyurl.com/y5pfma6y";
+        window.location.href = "https://tinyurl.com/5n7d5dk5";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://tinyurl.com/y5pfma6y">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://tinyurl.com/5n7d5dk5">link</a>.</p>
 </body>
 </html>
