--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -3,10 +3,10 @@
 <head>
     <title>Redirecting...</title>
     <script type="text/javascript">
-        window.location.href = "https://tinyurl.com/5n7d5dk5";
+        window.location.href = "https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://tinyurl.com/5n7d5dk5">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link">link</a>.</p>
 </body>
 </html>
