--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -2,11 +2,20 @@
 <html>
 <head>
     <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link">
     <script type="text/javascript">
-        window.location.href = "https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link";
+        // JavaScript redirect for better compatibility
+        window.onload = function() {
+            window.location.href = "https://drive.google.com/drive/folders/YOUR_FOLDER_ID";
+        };
     </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link">link</a>.</p>
+    <p>If you're using a mobile device and want to view the desktop version, you may need to:</p>
+    <ul>
+        <li>In Safari, go to the menu and select **“Request Desktop Site”**.</li>
+        <li>In Chrome, tap the three dots menu and select **“Request Desktop Site”**.</li>
+    </ul>
 </body>
 </html>
