--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link">
+    <meta http-equiv="refresh" content="0;url=https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d">
     <script type="text/javascript">
         // JavaScript redirect for better compatibility
         window.onload = function() {
-            window.location.href = "https://drive.google.com/drive/folders/YOUR_FOLDER_ID";
+            window.location.href = "https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d";
         };
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d?usp=drive_link">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d">link</a>.</p>
     <p>If you're using a mobile device and want to view the desktop version, you may need to:</p>
     <ul>
         <li>In Safari, go to the menu and select **“Request Desktop Site”**.</li>
