--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d">
-    <script type="text/javascript">
-        // JavaScript redirect for better compatibility
-        window.onload = function() {
-            window.location.href = "https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d";
-        };
-    </script>
+    <title>Access Wedding Photos</title>
+    <style>
+        .instructions {
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+        }
+        .link {
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d">link</a>.</p>
-    <p>If you're using a mobile device and want to view the desktop version, you may need to:</p>
-    <ul>
-        <li>In Safari, go to the menu and select **“Request Desktop Site”**.</li>
-        <li>In Chrome, tap the three dots menu and select **“Request Desktop Site”**.</li>
+    <h1>Welcome to Our Wedding Photo Album</h1>
+    
+    <p class="instructions">
+        **If you're using a mobile device and want to view the desktop version, please follow these instructions:**
+    </p>
+    <ul class="instructions">
+        <li>In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
+        <li>In Chrome, tap the three dots menu and select <strong>“Request Desktop Site”</strong>.</li>
     </ul>
+
+    <p>To view and upload photos, please click on the link below:</p>
+    <p class="link"><a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d" target="_blank">Open Wedding Photo Album</a></p>
 </body>
 </html>
