--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -17,14 +17,14 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        **If you're using a mobile device and want to view the desktop version, please follow these instructions:**
+        **Because of different cloud versions, If you're using a mobile device you must switch to view the desktop version, so please follow these instructions:**
     </p>
     <ul class="instructions">
         <li>In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
         <li>In Chrome, tap the three dots menu and select <strong>“Request Desktop Site”</strong>.</li>
     </ul>
 
-    <p>To view and upload photos, please click on the link below:</p>
+    <p>To view and upload photos, please click on the link below and then make the above mentioned settings:</p>
     <p class="link"><a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d" target="_blank">Open Wedding Photo Album</a></p>
 </body>
 </html>
