--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -3,13 +3,26 @@
 <head>
     <title>Access Wedding Photos</title>
     <style>
-        .instructions {
-            font-size: 18px;
-            font-weight: bold;
+        body {
+            font-family: Arial, sans-serif;
             color: #333;
+            margin: 20px;
+        }
+        .instructions {
+            font-size: 24px;
+            font-weight: bold;
+            color: #FF69B4; /* Hot pink color for emphasis */
+            margin-bottom: 20px;
         }
         .link {
-            font-size: 16px;
+            font-size: 20px;
+            color: #32CD32; /* Lime green color for the link */
+            margin-top: 10px;
+        }
+        .flower-icon {
+            font-size: 28px; /* Larger size for emojis */
+            margin-right: 10px;
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -17,14 +30,18 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        **Because of different cloud versions, If you're using a mobile device you must switch to view the desktop version, so please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device without they application Google Drive install, you might encounter issues in uploading the files and have to switch to the desktop version in browse. In order to do this please follow these instructions:**
     </p>
     <ul class="instructions">
-        <li>In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
-        <li>In Chrome, tap the three dots menu and select <strong>“Request Desktop Site”</strong>.</li>
+        <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
+        <li><span class="flower-icon">🌷</span> In Chrome, tap the three dots menu and select <strong>“Request Desktop Site”</strong>.</li>
     </ul>
 
-    <p>To view and upload photos, please click on the link below and then make the above mentioned settings:</p>
-    <p class="link"><a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d" target="_blank">Open Wedding Photo Album</a></p>
+    <p class="link">
+        <span class="flower-icon">🌻</span> To view and upload photos, please click on the link below:
+    </p>
+    <p class="link">
+        <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d" target="_blank">Open Wedding Photo Album</a>
+    </p>
 </body>
 </html>
