--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -41,7 +41,7 @@
         <span class="flower-icon">🌻</span> To view and upload photos, please click on the link below:
     </p>
     <p class="link">
-        <a href="https://drive.google.com/drive/folders/1bgKhad7404tOwHAkAhKzyncwbt54Qs_d" target="_blank">Open Wedding Photo Album</a>
+        <a href="https://www.icloud.com/iclouddrive/0c5DZI3GMpiNGywP4OLpaY-jA#Wedding_Photos" target="_blank">Open Wedding Photo Album</a>
     </p>
 </body>
 </html>
