--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -30,7 +30,7 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device without they application Google Drive install, you might encounter issues in uploading the files and have to switch to the desktop version in browse. In order to do this please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device without the application Google Drive, you might encounter issues in uploading the files and have to switch to the desktop version in browsew. In order to do this please follow these instructions:**
     </p>
     <ul class="instructions">
         <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
