--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -13,16 +13,23 @@
             font-weight: bold;
             color: #FF69B4; /* Hot pink color for emphasis */
             margin-bottom: 20px;
+            background-color: #f0f8ff; /* Light background color for highlighting */
+            padding: 15px;
+            border-radius: 8px; /* Rounded corners for better aesthetics */
         }
         .link {
-            font-size: 20px;
+            font-size: 24px; /* Increased size for consistency */
             color: #32CD32; /* Lime green color for the link */
-            margin-top: 10px;
+            margin-top: 20px;
+            font-weight: bold;
         }
         .flower-icon {
             font-size: 28px; /* Larger size for emojis */
             margin-right: 10px;
             vertical-align: middle;
+        }
+        a {
+            text-decoration: none; /* Remove underline from link */
         }
     </style>
 </head>
@@ -30,7 +37,7 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device without the application Google Drive, you might encounter issues in uploading the files and have to switch to the desktop version in browsew. In order to do this please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive application, you might encounter issues uploading files. To switch to the desktop version in your browser, please follow these instructions:**
     </p>
     <ul class="instructions">
         <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
