--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Access Wedding Photos</title>
+    <title>Upload Wedding Photos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,37 +11,45 @@
         .instructions {
             font-size: 24px;
             font-weight: bold;
-            color: #FF69B4; /* Hot pink color for emphasis */
+            color: #000000; /* Black color for the instructions */
             margin-bottom: 20px;
+            background-color: #f0f8ff; /* Light background color for highlighting */
+            padding: 15px;
+            border-radius: 8px; /* Rounded corners for better aesthetics */
         }
         .link {
-            font-size: 20px;
-            color: #32CD32; /* Lime green color for the link */
-            margin-top: 10px;
+            font-size: 24px; /* Larger size for consistency */
+            color: #8A2BE2; /* BlueViolet color for the link */
+            margin-top: 20px;
+            font-weight: bold;
         }
         .flower-icon {
             font-size: 28px; /* Larger size for emojis */
             margin-right: 10px;
             vertical-align: middle;
         }
+        a {
+            text-decoration: none; /* Remove underline from link */
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to Our Wedding Photo Album</h1>
+    <h1>Upload Your Wedding Photos</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device without they application Google Drive install, you might encounter issues in uploading the files and have to switch to the desktop version in browse. In order to do this please follow these instructions:**
+        <span class="flower-icon">🍏</span> **Apple users, please note:** The link will create a sharing permission for the folder, but to upload your photos, you need to use the Photos app. Unfortunately, the Files app does not provide the upload functionality directly. Please follow these instructions:
     </p>
     <ul class="instructions">
-        <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
-        <li><span class="flower-icon">🌷</span> In Chrome, tap the three dots menu and select <strong>“Request Desktop Site”</strong>.</li>
+        <li><span class="flower-icon">📸</span> Open the <strong>Photos app</strong> on your iPhone or iPad.</li>
+        <li><span class="flower-icon">🌟</span> Select the photos you want to upload.</li>
+        <li><span class="flower-icon">🔄</span> Use the <strong>“Share”</strong> option and choose <strong>“Save to Files”</strong> to upload the photos to the shared folder.</li>
     </ul>
 
     <p class="link">
-        <span class="flower-icon">🌻</span> To view and upload photos, please click on the link below:
+        <span class="flower-icon">🌐</span> To access the shared folder, click on the link below:
     </p>
     <p class="link">
-        <a href="https://www.icloud.com/iclouddrive/0c5DZI3GMpiNGywP4OLpaY-jA#Wedding_Photos" target="_blank">Open Wedding Photo Album</a>
+        <a href="https://drive.google.com/drive/folders/https://www.icloud.com/iclouddrive/0c5DZI3GMpiNGywP4OLpaY-jA#Wedding_Photos" target="_blank">Open Wedding Photo Album</a>
     </p>
 </body>
 </html>
