--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -11,15 +11,15 @@
         .instructions {
             font-size: 24px;
             font-weight: bold;
-            color: #FF69B4; /* Hot pink color for emphasis */
+            color: #000000; /* Black color for instructions */
             margin-bottom: 20px;
             background-color: #f0f8ff; /* Light background color for highlighting */
             padding: 15px;
             border-radius: 8px; /* Rounded corners for better aesthetics */
         }
         .link {
-            font-size: 24px; /* Increased size for consistency */
-            color: #32CD32; /* Lime green color for the link */
+            font-size: 24px; /* Larger size for consistency */
+            color: #8A2BE2; /* Purple color for the link */
             margin-top: 20px;
             font-weight: bold;
         }
@@ -37,7 +37,7 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive application, you might encounter issues uploading files. To switch to the desktop version in your browser, please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device and want to view the desktop version, please follow these instructions:**
     </p>
     <ul class="instructions">
         <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
