--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -37,7 +37,7 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device and want to view the desktop version, please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive Application, the link will be opened in the browser and you may whave to switch to the desktop version to be able to upload files, please follow these instructions:**
     </p>
     <ul class="instructions">
         <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
