--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Access Wedding Photos</title>
+    <title>Welcome to our Wedding Shared Photo Album</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@
     <h1>Welcome to Our Wedding Photo Album</h1>
     
     <p class="instructions">
-        <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive Application, the link will be opened in the browser and you may whave to switch to the desktop version to be able to upload files, please follow these instructions:**
+        <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive Application, the link will be opened in the browser and you may have to switch to the desktop version to be able to upload files, please follow these instructions:**
     </p>
     <ul class="instructions">
         <li><span class="flower-icon">🌼</span> In Safari, go to the menu and select <strong>“Request Desktop Site”</strong>.</li>
