--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload Wedding Photos</title>
+    <title>Welcome to our Wedding Shared Photo Album</title>
     <style>
         body {
             font-family: Arial, sans-serif;
