--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Upload Your Wedding Photos</h1>
+    <h1>Welcome to our Wedding Shared Photo Album</h1>
     
     <p class="instructions">
         <span class="flower-icon">🍏</span> **Apple users, please note:** The link will create a sharing permission for the folder, but to upload your photos, you need to use the Photos app. Unfortunately, the Files app does not provide the upload functionality directly. Please follow these instructions:
