--- a/redirectgoogle.html
+++ b/redirectgoogle.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Our Wedding Photo Album</h1>
+    <h1>Welcome to our Wedding Shared Photo Album</h1>
     
     <p class="instructions">
         <span class="flower-icon">🌸</span> **If you're using a mobile device without the Google Drive Application, the link will be opened in the browser and you may have to switch to the desktop version to be able to upload files, please follow these instructions:**
