--- a/redirectcloud.html
+++ b/redirectcloud.html
@@ -49,7 +49,7 @@
         <span class="flower-icon">🌐</span> To access the shared folder, click on the link below:
     </p>
     <p class="link">
-        <a href="https://www.icloud.com/iclouddrive/0c5DZI3GMpiNGywP4OLpaY-jA#Wedding_Photos" target="_blank">Open Wedding Photo Album</a>
+        <a href="https://www.icloud.com/iclouddrive/0b1-GufaHcyHRCK_EqrKkYWwg#Wedding_Day" target="_blank">Open Wedding Photo Album</a>
     </p>
 </body>
 </html>
